--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,7 +30,7 @@ runtime = "1.9.2"
 ui = "1.9.2"
 material3 = "1.4.0"
 
-cicerone = "7.1"
+datastore = "1.1.7"
 
 
 [libraries]
@@ -59,7 +59,8 @@ androidx-runtime = { group = "androidx.compose.runtime", name = "runtime", versi
 androidx-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "ui" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 
-cicerone = { module = "com.github.terrakok:cicerone", version.ref = "cicerone" }
+datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
+datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
