--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,35 +13,24 @@ jobs:
     timeout-minutes: 60
 
     env:
-      JAVA_VERSION: '11'
+      JAVA_VERSION: '17'
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: ${{ env.JAVA_VERSION }}
-          cache: 'gradle'
+          cache: gradle
 
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-
-      - name: Cache Gradle wrapper and caches
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-            ~/.gradle/native
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
 
       - name: Run Detekt
         run: ./gradlew detekt --no-daemon
 
       - name: Run unit tests
-        run: ./gradlew test --no-daemo
+        run: ./gradlew test --no-daemon
